<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ltgrey2"
    android:orientation="vertical"
    tools:context="com.example.vancouvertourismappfinal.TranslatorClasses.TranslationActivity">

    <TextView
        android:id="@+id/empty_view_not_connected"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="32dp"
        android:text="@string/no_internet_connection"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.12"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_language_from"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/Reeeeeeeee"
            android:foregroundTint="@color/colorPrimary"
            android:spinnerMode="dropdown" />

        <ImageView
            android:id="@+id/image_swap"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:src="@drawable/ic_swap_horiz_black_24dp"
            android:tint="@color/colorDarkGray" />

        <Spinner
            android:id="@+id/spinner_language_to"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/Reeeeeeeee"
            android:foregroundTint="@color/colorPrimary"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <EditText
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_text"
            android:padding="16dp"
            android:paddingBottom="30dp"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_listen"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:src="@drawable/ic_mic_black_24dp"
            android:tint="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/clear_text"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:src="@drawable/ic_clear_black_24dp"
            android:tint="@android:color/darker_gray" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_translate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:text="@string/new_translate"
        android:textColor="@android:color/white"
        android:textSize="@dimen/translate_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/text_translated"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:padding="16dp"
            android:paddingBottom="30dp"
            android:scrollbars="vertical"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_speak"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:src="@drawable/ic_volume_up_black_24dp"
            android:tint="@android:color/darker_gray" />
    </RelativeLayout>
</LinearLayout>
