<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".CarRentalClasses.ClientActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#CB007FFF"
        android:gravity="center"
        android:text="@string/select_rental_location"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:entries="@array/locations"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CB007FFF"
        android:text="How do you want to pay:"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="28sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rdgPay"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/lgrey"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbHourly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/hourly"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdbDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/daily"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView89"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Start Date/Time:"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etStartDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Reeeeeeeee"
            android:editable="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="datetime"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView322"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="End Date/Time:"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEndDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Reeeeeeeee"
            android:ems="10"
            android:inputType="datetime"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="28sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSelections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textColor="@color/Reeeeeeeee"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CB007FFF"
        android:text="Insurance Required (Extra $15 per Day)"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="28sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rdgYN"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/lgrey"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbYes"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Yes"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdbNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="No"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CB007FFF"
        android:text="Please select your card type:"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="28sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rdgCardType"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/lgrey"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbVisa"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Visa"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdbMC"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Mastercard"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdbAmex"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="American Express"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rdbDiscover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Discover"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>


    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CB007FFF"
        android:text="Card Number:"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Reeeeeeeee"
        android:ems="10"
        android:hint="Enter Credit Card Number"
        android:inputType="phone"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default"
        android:textSize="28sp" />

    <CheckBox
        android:id="@+id/cbTerms"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/lgrey"
        android:text="Accept the Terms and Conditions"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:visibility="invisible" />
</LinearLayout>